# fastapi-crud-todo-app-aws

./: Makefile  README.md  pyproject.toml
tests/: test_todo.py
