[tool.poetry]
name = "todo"
# the first alpha pre-release of version 0.1.0
version = "0.1.0-alpha.1 "
description = "A CRUD Todo list app with FastAPI, Python and AWS"
authors = ["Joseph Corrado <josephcorrado7@gmail.com>"]
readme = "README.md"
packages = [
    {include = "todo"}
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"


[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
flake8 = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
interrogate = "*"
isort = "*"
commitizen = "*"
ipykernel = "*"
jupyter = "*"
pandas-stubs = "*"
flake8-bugbear = "*"
sourcery = "*"

[tool.isort]
profile = "black"
import_heading_stdlib = "Python Standard Library Imports"
import_heading_thirdparty = "Third Party Imports"
import_heading_firstparty = "todo Imports"
# src_paths = ["<path-to-src-code>"]
known_first_party = ["todo"]
# known_third_party = ["<any 3rd party packages with potential name collisions>"]

 [tool.pytest.ini_options]
 filterwarnings = [
     # transform all other warnings into errors
     "error",
     # ignore UserWarnings
     "ignore::UserWarning",
     # note the use of single quote below to denote "raw" strings in TOML
     'ignore:function ham\(\) is deprecated:DeprecationWarning',
     "ignore::DeprecationWarning",
 ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
